stimpaks work, resting works, gotta do a bit to get medical care working. Armour options are bieng worked onm. However, it is now 3am, so bed

--- a/html/aaaaaaaaa.html
+++ b/html/aaaaaaaaa.html
@@ -396,7 +396,7 @@
                                                     <delete target="inventory.%index%"></delete>
                                                 </click>
                                             </span>
-                                        </div>x
+                                        </div>
                                     </div>
                                 </div>
                             </div>
