Worked on the combat page. found a huge problem in the way qualitlies are handled, so I will have to rewrite that section considerably

--- a/html/actors/pc_sheet/combat_tab.html
+++ b/html/actors/pc_sheet/combat_tab.html
@@ -155,7 +155,16 @@
                         <div class="glyphicon glyphicon-info-sign link">
                             <!--display weapon qualities here-->
                             <click>
-
+                                <prompt>
+                                    <div class="flexcolumn greyborder-round">
+                                        <label>Ranked Qualities</label>
+                                        <bank target="%path%.weapon.ranked_properties">
+                                            <div>
+                                                <p>Eval{@%path%.name} | Eval{@%path%}</p>
+                                            </div>
+                                        </bank>
+                                    </div>
+                                </prompt>
                             </click>
                         </div>
                     </div>
